[project]
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
name = "cloud-dog-jobs"
version = "0.2.0"
description = "PS-75 Job & Queue Management for Cloud-Dog services"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
config = ["cloud-dog-config>=0.1.0"]
logging = ["cloud-dog-logging>=0.1.0"]
idam = ["cloud-dog-idam>=0.1.0"]
redis = ["redis>=5.0"]
alembic = ["alembic>=1.13"]
fastapi = ["fastapi>=0.110"]
otel = ["opentelemetry-api>=1.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
    "redis>=5.0",
    "PyMySQL>=1.1",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloud_dog_jobs"]

[tool.pytest.ini_options]
addopts = "-ra -p no:cloud_dog_config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/platform-jobs"
